[package]
name = "antelope_tokens"
version = "0.3.8"
authors = [
    "Denis <denis@pinax.network>",
    "Yaro <yaro@pinax.network>",
    "Charles <charles@pinax.network>",
    "Ali <ali@pinax.network>",
    "Etienne <etienne@pinax.network>"
]
description = "Antelope tokens substreams"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
substreams-antelope = "0.4"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
prost = "0.11"
prost-types = "0.11"
substreams = "0.5"
substreams-antelope = "0.4"
substreams-sink-kv = "0.1.2"
substreams-database-change = "1.0.0"
substreams-entity-change = "1.3.0"
antelope = "0.2"
