[package]
name = "antelope_tokens"
version = "0.0.0"
authors = [
    "Denis <denis@pinax.network>",
    "Yaro <yaro@pinax.network>",
    "Charles <charles@pinax.network>",
    "Ali <ali@pinax.network>",
    "Etienne <etienne@pinax.network>",
]
description = "Antelope tokens substreams"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
substreams-antelope = "0.6"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
prost = "0.13"
prost-types = "0.13"
substreams = "0.6"
substreams-antelope = "0.6"
substreams-sink-kv = "0.1.2"
substreams-database-change = "2.0.0"
substreams-entity-change = "2.0.0"
antelope = "0.2"
