[package]
name = "substreams-antelope-tokens"
version = "1.0.1"
authors = [
    "Denis <denis@pinax.network>",
    "Yaro <yaro@pinax.network>",
    "Charles <charles@pinax.network>",
    "Ali <ali@pinax.network>",
    "Etienne <etienne@pinax.network>",
]
description = "Substreams for Antelope tokens"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
prost = "0.13"
prost-types = "0.13"
substreams = "0.6"
substreams-antelope = "0.6"
antelope = "0.2"

[build-dependencies]
substreams-antelope = "0.6"
